--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,11 +39,7 @@ jobs:
           python-version: '3.10'
           #architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
           
-      - name: Set up No
-      
-      
-      
-      。03+de.js
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20'
