--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,9 @@
 
 name: Run Arxiv Papers Daily
 
+permissions:
+  contents: write
+
 # Controls when the workflow will run
 on:
   # Allows you to run this workflow manually from the Actions tab
