--- a/config.yaml
+++ b/config.yaml
@@ -23,7 +23,7 @@ md_wechat_path: './docs/wechat.md'
 # keywords to search
 keywords:
     "Human Pose Estimation": 
-        filters: ["human pose estimation", "human pose", "human motion", "human-centric", "3d pose estimation", "2D pose estimation", "shape estimation"]
+        filters: ["human pose estimation", "human pose", "human motion", "human-centric", "3d pose estimation", "2D pose estimation", "shape estimation", "pose estimation"]
     "Action Recognition": 
         filters: ["human action recognition", "action recognition"]
     "Spatial Temporal Modelling":
